--- a/css/styles.css
+++ b/css/styles.css
@@ -1713,7 +1713,7 @@ pre code {
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #88dccc;
+  border-color: #343a40;
 }
 
 .table-hover .table-primary:hover {
