--- a/css/styles.css
+++ b/css/styles.css
@@ -6073,7 +6073,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #2f9bda !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
