--- a/css/styles.css
+++ b/css/styles.css
@@ -6079,7 +6079,7 @@ a.close.disabled {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #148f77 !important;
+  background-color: #2f9bda !important;
 }
 
 .bg-secondary {
